NetBSD Problem Report #43474
From www@NetBSD.org Mon Jun 14 21:08:37 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id 6AB8D63BA08
for <gnats-bugs@gnats.NetBSD.org>; Mon, 14 Jun 2010 21:08:37 +0000 (UTC)
Message-Id: <20100614210837.39E0663B11D@www.NetBSD.org>
Date: Mon, 14 Jun 2010 21:08:37 +0000 (UTC)
From: sainio@t-online.de
Reply-To: sainio@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Wrong structure in txcon_txintr
X-Send-Pr-Version: www-1.0
>Number: 43474
>Category: port-hpcmips
>Synopsis: Wrong structure in txcon_txintr
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: port-hpcmips-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Jun 14 21:10:01 +0000 2010
>Closed-Date: Fri Jul 16 16:24:01 +0000 2010
>Last-Modified: Fri Nov 26 17:20:01 +0000 2010
>Originator: Risto Sainio
>Release: NetBSD 5.0.2_PATCH
>Organization:
>Environment:
NetBSD rsa02.rsa.org 5.0.2_PATCH NetBSD 5.0.2_PATCH (TX3922_rsa) #22: Sat Jun 12 01:50:35 CEST 2010 root@vrsa89:/usr/objdir_current/sys/arch/hpcmips/compile/TX3922_rsa hpcmips
>Description:
Looks that in .../hpcmips/tx/txcom.c in function txcom_txintr the callout_reset should use sc->sc_txsoft_ch instead of sc->sc_rxsoft_ch as argument
>How-To-Repeat:
>Fix:
int
txcom_txintr(void *arg)
{
struct txcom_softc *sc = arg;
struct txcom_chip *chip = sc->sc_chip;
tx_chipset_tag_t tc = chip->sc_tc;
if (sc->sc_tbc > 0) {
tx_conf_write(tc, TX39_UARTTXHOLD_REG(chip->sc_slot),
(*sc->sc_tba &
TX39_UARTTXHOLD_TXDATA_MASK));
sc->sc_tbc--;
sc->sc_tba++;
} else {
callout_reset(&sc->sc_txsoft_ch, 1, txcom_txsoft, sc);
}
return 0;
}
>Release-Note:
>Audit-Trail:
From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/43474 CVS commit: src/sys/arch/hpcmips/tx
Date: Fri, 16 Jul 2010 15:30:10 +0000
Module Name: src
Committed By: tsutsui
Date: Fri Jul 16 15:30:10 UTC 2010
Modified Files:
src/sys/arch/hpcmips/tx: txcom.c
Log Message:
Fix a wrong arg for callout_reset(9) in txcom_txintr(). PR port-hpcmips/43474
To generate a diff of this commit:
cvs rdiff -u -r1.42 -r1.43 src/sys/arch/hpcmips/tx/txcom.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sat, 17 Jul 2010 01:24:01 +0900
State-Changed-Why:
Fix committed. Pullup will be handled by PR/43472.
From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/43474 CVS commit: [netbsd-5] src/sys/arch/hpcmips/tx
Date: Fri, 26 Nov 2010 17:16:04 +0000
Module Name: src
Committed By: riz
Date: Fri Nov 26 17:16:03 UTC 2010
Modified Files:
src/sys/arch/hpcmips/tx [netbsd-5]: txcom.c
Log Message:
Pull up following revision(s) (requested by tsutsui in ticket #1485):
sys/arch/hpcmips/tx/txcom.c: revision 1.42
sys/arch/hpcmips/tx/txcom.c: revision 1.43
Add missing callout_init(9) calls. PR port-hpcmips/43472
Fix a wrong arg for callout_reset(9) in txcom_txintr(). PR port-hpcmips/43474
To generate a diff of this commit:
cvs rdiff -u -r1.40 -r1.40.6.1 src/sys/arch/hpcmips/tx/txcom.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.