Fix a wrong arg for callout_reset(9) in txcom_txintr(). PR port-hpcmips/43474